--- a/templatest/home.html
+++ b/templatest/home.html
@@ -5,6 +5,13 @@
     <title>Blog</title>
 </head>
 <body>
-
+<h1>
+    Kun yangiliklari
+</h1>
+<ul>
+    {% for post in object_list %}
+    <li> <h2>{{post.title}}</h2> <br> {{post.text}} </li>
+    <br>
+    {% endfor %}
 </body>
 </html>
